--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ STEAM_API_KEY=steamkey_change
 STEAM_STEAMID64=steamid64_change
 
 # Poller
-ENABLE_POLLER=false
+ENABLE_POLLER=true
 POLL_INTERVAL_SECONDS=60
 STEAM_MAX_GAMES=0
 MAX_NEW_EVENTS_RETURNED=50
